Fix header on mobile

--- a/src/main/resources/public/res/style.css
+++ b/src/main/resources/public/res/style.css
@@ -45,6 +45,8 @@ h2{
 	border-bottom: solid 1px rgb(136, 144, 38);
 	box-shadow: 0 -1px 0 rgb(210, 218, 113) inset;
 	height: 48px;
+	width: 100%;
+	min-width: 1280px;
 }
 
 .header .logo{
