--- a/src/main/web/style.css
+++ b/src/main/web/style.css
@@ -53,6 +53,8 @@ h2{
 	border-bottom: solid 1px color($accent shade(20%));
 	box-shadow: 0 -1px 0 color($accent lightness(+20%)) inset;
 	height: 48px;
+	width: 100%;
+	min-width: $siteWidth;
 }
 
 .header .logo{
